Bug 1066543 - Add MS_VERBOSE to the remount options in the updater automounter. r=marshall_law, a=bajaj